--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,19 @@
 asgiref==3.4.1
+crispy-bootstrap5==0.6
 Django==3.2.9
+django-autoslug==1.9.8
+django-crispy-forms==1.13.0
+django-model-utils==4.2.0
+django-stdimage==5.3.0
+EbookLib==0.17.1
+epub==0.99.0
+Genshi==0.7.5
+html==1.13
+lxml==4.6.4
 mysqlclient==2.1.0
 Pillow==8.4.0
+progressbar==2.5
 pytz==2021.3
 reportlab==3.6.2
+six==1.16.0
 sqlparse==0.4.2
